fix(website): improve visibility of note boxes

--- a/packages/website/static/index.css
+++ b/packages/website/static/index.css
@@ -43,3 +43,7 @@ body:not(.sideNavVisible) .button:hover {
   background: #ea3458;
   color: #fff;
 }
+
+blockquote {
+  color: #24292e;
+}
